# test_kinect

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  twokinect.cpp  twokinect_calibration.cpp  twokinect_pcl.cpp
